--- a/CurrencyInformation/Base.lproj/Main.storyboard
+++ b/CurrencyInformation/Base.lproj/Main.storyboard
@@ -87,7 +87,7 @@
                     <tabBarItem key="tabBarItem" title="Банк продает" id="ZX5-Bm-1Qy">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-17"/>
                     </tabBarItem>
-                    <navigationItem key="navigationItem" title="Банк продает" id="VQn-3y-S1d">
+                    <navigationItem key="navigationItem" id="VQn-3y-S1d">
                         <barButtonItem key="backBarButtonItem" title="Назад" id="McO-vZ-Fvm"/>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -156,7 +156,7 @@
                     <tabBarItem key="tabBarItem" title="Банк покупает" id="6ya-DE-9No">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-17"/>
                     </tabBarItem>
-                    <navigationItem key="navigationItem" title="Банк покупает" id="XAv-JM-99n">
+                    <navigationItem key="navigationItem" id="XAv-JM-99n">
                         <barButtonItem key="backBarButtonItem" title="Назад" id="P9u-HP-iQ9"/>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -396,6 +396,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="2gi-vL-CVZ"/>
+        <segue reference="dpw-tt-zIS"/>
     </inferredMetricsTieBreakers>
 </document>
